# PAMSI

ListaBankowaZadanie1/: CMakeLists.txt
ListaBankowaZadanie1+gui/: oknopamsi.sln
ListaBankowaZadanie1+gui/oknopamsi/: MyForm.cpp  MyForm.h  menu.h  oknopamsi.vcxproj  oknopamsi.vcxproj.filters  pamsi.h
ListaBankowaZadanie1+gui/oknopamsi/x64/Debug/: oknopamsi.exe.recipe  oknopamsi.vcxproj.FileListAbsolute.txt  oknopamsi.vcxproj.GenerateResource.cache
ListaBankowaZadanie1+gui/oknopamsi/x64/Debug/oknopamsi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  oknopamsi.lastbuildstate
ListaBankowaZadanie1+gui/x64/Debug/: oknopamsi.exe.metagen
ListaBankowaZadanie1/pamsi/: CMakeLists.txt  menu.h  pamsi.cpp  pamsi2.h  pamsi3.h
Sortowanie/: CMakeLists.txt
Sortowanie/Sortowanie/: CMakeLists.txt  Sortowanie.cpp  Sortowanie.h
